Bug 1505848 - switch from CSS based approach to calculating contrast to canvas one, that also handles gradients and images. r=jdescottes,pbro
MozReview-Commit-ID: JS39hAY571f

Differential Revision: https://phabricator.services.mozilla.com/D11368

UltraBlame original commit: 403db98e8ac8b9ac50a1ebb26755d603c058d157

--- a/devtools/server/actors/highlighters.css
+++ b/devtools/server/actors/highlighters.css
@@ -5201,6 +5201,43 @@ not
 :
 empty
 )
+:
+after
+{
+margin
+-
+inline
+-
+start
+:
+2px
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+:
+not
+(
+:
+empty
+)
 .
 AA
 :
@@ -5357,6 +5394,134 @@ content
 AAA
 \
 2713
+"
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+.
+accessible
+-
+contrast
+-
+ratio
+-
+label
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+#
+accessible
+-
+contrast
+-
+ratio
+-
+max
+:
+not
+(
+:
+empty
+)
+:
+before
+{
+margin
+-
+inline
+-
+end
+:
+3px
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+#
+accessible
+-
+contrast
+-
+ratio
+-
+max
+{
+margin
+-
+inline
+-
+start
+:
+3px
+;
+}
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+accessible
+-
+infobar
+-
+audit
+#
+accessible
+-
+contrast
+-
+ratio
+-
+max
+:
+not
+(
+:
+empty
+)
+:
+before
+{
+content
+:
+"
+-
 "
 ;
 }
